--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/Barbarpotato/svr-tracker#readme",
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.21.2",
-    "json2csv": "^6.0.0-alpha.2",
-    "dotenv": "^16.3.1"
+    "json2csv": "^6.0.0-alpha.2"
   }
 }
