--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/Barbarpotato/svr-tracker#readme",
   "dependencies": {
     "cheerio": "^1.0.0",
+    "csv-parser": "^3.2.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
+    "https": "^1.0.0",
     "json2csv": "^6.0.0-alpha.2"
   }
 }
